# sensaor

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
noxim/: riscv32ec-unknown-none-elf.json
pcba/sensaor/: sensaor.kicad_pcb  sensaor.kicad_prl  sensaor.kicad_pro  sensaor.kicad_sch
src/: main.rs
